// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSummary renders correctly on desktop 1`] = `
<Link
  as="/details"
  href="/details"
>
  <a
    className="appSummary"
  >
    <div
      className="colorBar"
      style={
        Object {
          "backgroundImage": "url('/static/latest-version-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
        }
      }
    />
    <div
      className="body"
    >
      <div
        className="iconWrapper"
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Base
          paddingHorizontal="x4"
          paddingVertical="x2"
        >
          <Text
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Base>
        <div
          className="note"
        />
      </div>
      <div
        className="titleWrapper"
      >
        <Base
          className="platformIconWrapper"
        >
          <Icon
            color="grape-4"
            name="PlatformsApple"
            size="1.5rem"
          />
        </Base>
        <Text
          color="grape-4"
          letterSpacing="x1"
          size="x5"
          weight="bold"
        >
          My app v1.1.0 (28)
        </Text>
      </div>
      <div
        className="description"
      >
        This is a short description about my app. It is a good app. End of description.
      </div>
    </div>
  </a>
</Link>
`;

exports[`AppSummary renders correctly on mobile 1`] = `
<Link
  as="/details"
  href="/details"
>
  <a
    className="appSummary"
  >
    <div
      className="colorBar"
      style={
        Object {
          "backgroundImage": "url('/static/latest-version-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
        }
      }
    />
    <div
      className="body"
    >
      <div
        className="iconWrapper"
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Base
          paddingHorizontal="x4"
          paddingVertical="x4"
        >
          <Text
            color="gray-6"
            letterSpacing="x1"
            size="x2"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Base>
        <div
          className="note"
        />
      </div>
      <div
        className="titleWrapper"
      >
        <Base
          className="platformIconWrapper"
        >
          <Icon
            color="grape-4"
            name="PlatformsApple"
            size="1.5rem"
          />
        </Base>
        <Text
          color="grape-4"
          letterSpacing="x1"
          size="x4"
          weight="bold"
        >
          My app v1.1.0 (28)
        </Text>
      </div>
      <div
        className="description"
      >
        This is a short description about my app. It is a good app. End of description.
      </div>
    </div>
  </a>
</Link>
`;

exports[`AppSummary renders correctly on tablet 1`] = `
<Link
  as="/details"
  href="/details"
>
  <a
    className="appSummary"
  >
    <div
      className="colorBar"
      style={
        Object {
          "backgroundImage": "url('/static/latest-version-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
        }
      }
    />
    <div
      className="body"
    >
      <div
        className="iconWrapper"
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Base
          paddingHorizontal="x4"
          paddingVertical="x2"
        >
          <Text
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Base>
        <div
          className="note"
        />
      </div>
      <div
        className="titleWrapper"
      >
        <Base
          className="platformIconWrapper"
        >
          <Icon
            color="grape-4"
            name="PlatformsApple"
            size="1.5rem"
          />
        </Base>
        <Text
          color="grape-4"
          letterSpacing="x1"
          size="x4"
          weight="bold"
        >
          My app v1.1.0 (28)
        </Text>
      </div>
      <div
        className="description"
      >
        This is a short description about my app. It is a good app. End of description.
      </div>
    </div>
  </a>
</Link>
`;
